# rainy-toolkit

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Cargo.toml  LICENSE.txt  README.md  Readme.md  api-examples.html  cpp.hint  hashmap.json  index.html  main.cpp  markdown-examples.html  package-lock.json  package.json  refl.hpp  sleepy.yaml  vcpkg-configuration.json  vcpkg.json  vp-icons.css  春风化雨，润物无声.md  规范.md
examples/reflection/function/01_basic/: CMakeLists.txt  main.cpp  test.cc  test.h
rainy/utility/: CMakeLists.txt  invoke.hpp  iterator.hpp  ref_wrap.hpp
tektite/demonstrate/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  alpha.cpp  main.cpp  moudle_test.cpp  test_main.cpp
tests/test_suites/: test_basic_string.cpp  test_format_wrapper.cpp  test_function_pointer.cpp  test_source_location.cpp
tests/test_suites/pal/: test_pal_atomic.cpp
xaga/benchmark/any/: CMakeLists.txt  main.cpp
xaga/benchmark/ctti/: CMakeLists.txt  main.cpp
xaga/benchmark/event/: CMakeLists.txt  main.cpp
xaga/benchmark/format/: CMakeLists.txt
xaga/benchmark/format/src/: format_benchmark.cc
xaga/benchmark/json/: CMakeLists.txt  main.cpp
xaga/benchmark/reflection/: CMakeLists.txt
xaga/benchmark/reflection/src/: create_object.cc  function.cc  main.cpp
xaga/examples/reflection/function/01_basic/: CMakeLists.txt  main.cpp
xaga/examples/reflection/reflect/01_register/: CMakeLists.txt  main.cpp
xaga/rust_generator/: Cargo.toml  README.md  Readme.md  build.rs
xaga/rust_generator/src/: main.rs  marco.rs
xaga/rust_generator/src/cli/: arguments.rs  command_description.rs  command_help.rs  mod.rs  node.rs
xaga/rust_generator/src/cli/easter_egg/: mod.rs  rain.rs  tea.rs
xaga/rust_generator/src/dev_debug_tools/: ast_node_tree.rs  mod.rs
xaga/rust_generator/src/lang/: help.rs  i18n.rs  language.rs  mod.rs
xaga/rust_generator/src/model/: cpp_class.rs  cpp_code_registration.rs  cpp_ctor.rs  cpp_function.rs  cpp_header_names.rs  cpp_sources_names.rs  incremental.rs  mod.rs
xaga/rust_generator/src/parser/: cpp_parser.rs  extractor.rs  mod.rs
xaga/rust_generator/src/utility/: bitset.rs  config.rs  file.rs  hash.rs  language.rs  mod.rs  text.rs  toml_to_fluent.rs
xaga/rust_generator/statics/: embed_warnings
xaga/rust_generator/statics/en-US/: generator_langpack.toml
xaga/rust_generator/statics/zh-Hans/: generator_langpack.toml
xaga/rust_generator/update_log/: 0.1.5.md
xaga/rust_generator/update_log/0.1/: 0.1.6.md
xaga/tests/: CMakeLists.txt  alpha.cpp  moudle_test.cpp  test_main.cpp
xaga/tests/test_suites/: test_basic_string.cpp  test_filesystem_pal.cpp  test_format_wrapper.cpp  test_function_pointer.cpp  test_source_location.cpp
xaga/tests/test_suites/collections/: array.cc  bit_vector.cc  unordered_map.cc  vector.cc
xaga/tests/test_suites/collections/concurrency/: forward_list.cc
xaga/tests/test_suites/core/: atomic_pal.cc
xaga/tests/test_suites/core/collections/: bit_vector.cc  vector.cc
xaga/tests/test_suites/core/container/: indirect.cc  polymorphic.cc  variant.cc
xaga/tests/test_suites/core/containers/: optional.cc
xaga/tests/test_suites/core/diagnostics/: stacktrace.cc
xaga/tests/test_suites/core/text/: charconv.cc  format.cc  string.cc
xaga/tests/test_suites/foundation/concurrency/: atomic.cc  barrier.cc  condition_variable.cc  condition_variable_any.cc  executor.cc  future.cc  mutex.cc  shared_mutex.cc
xaga/tests/test_suites/foundation/container/: indirect.cc  optional.cc  polymorphic.cc  variant.cc
xaga/tests/test_suites/foundation/io/executor/: strand.cc
xaga/tests/test_suites/foundation/io/file/: streamfile.cc
xaga/tests/test_suites/foundation/io/filesystem/: operations.cc  random_access_file.cc  streamfile.cc
xaga/tests/test_suites/foundation/io/net/: address.cc  buffer.cc  internet.cc  io_context.cc  ph.cc  socket.cc  ssl_stream.cc  timer.cc
xaga/tests/test_suites/foundation/io/stream/: console_stream.cc  (+3 more)
xaga/tests/test_suites/foundation/memory/: hazard_pointer.cc
xaga/tests/test_suites/foundation/text/: lexical_cast.cc
xaga/tests/test_suites/meta/moon/: enumeration.cc  tuple_like.cc
xaga/tests/test_suites/meta/wtf/: express_center.cc
xaga/tests/test_suites/pal/: test_pal_atomic.cpp
xaga/tests/test_suites/text/: string_view.cc
xaga/tests/test_suites/utility/: basic_any.cc
xaga/tests/test_suites/utility/advanced/: basic_any_advanced.cc  basic_any_convert_test.cc
xaga/tools/prism_moc/: Cargo.toml  README.md  build.rs  install.rs
xaga/tools/prism_moc/src/: cli.rs  dev_debug_tools.rs  gen.rs  lang.rs  main.rs  marco.rs  model.rs  parser.rs  test.rs
xaga/tools/prism_moc/src/cli/: arguments.rs  node.rs
xaga/tools/prism_moc/src/dev_debug_tools/: ast_node_tree.rs
xaga/tools/prism_moc/src/lang/: language.rs  mod.rs  storage.rs  structure.rs
xaga/tools/prism_moc/src/model/: cpp_class.rs  cpp_code_registration.rs  cpp_enumeration.rs  cpp_function.rs  cpp_property.rs  cpp_sources_names.rs  incremental.rs  mod.rs
xaga/tools/prism_moc/src/parser/: cpp_parser.rs  extractor.rs  mod.rs  node.rs
xaga/tools/prism_moc/src/test/: client_arguments.rs  parser.rs
xaga/tools/prism_moc/src/utility/: file.rs  hash.rs  text.rs
xaga/tools/prism_moc/statics/: embed_licences
xaga/tools/prism_moc/statics/en-US/: generator_langpack.toml
xaga/tools/prism_moc/statics/zh-Hans/: generator_langpack.toml
xaga/tools/prism_moc/update_log/0.1/: 0.1.3.md  0.1.4.md
xaga/tools/prism_moc/update_log/0.2/: 0.2.0.md
xaga/tools/sleepy/: Cargo.toml  README.md  sleepy.yaml
xaga/tools/sleepy/src/: data.rs  gen_compile_db.rs  generator.rs  i18n.rs  main.rs  parser.rs  toolchain.rs  utils.rs
xaga/tools/sleepy/src/data/: config.rs  context.rs  document.rs
xaga/tools/sleepy/src/generator/: markdown.rs  rt_vitepress_markdown.rs
xaga/tools/sleepy/src/parser/: alias.rs  class.rs  comment.rs  concept.rs  enum_.rs  function.rs  macro_.rs  namespace.rs  variable.rs
xaga/tools/sleepy/src/utils/: comment.rs  traits.rs
(+859 files in other folders)
