[package]
name = "Cpp-Reflection-Code-Generator"
version = "0.1.0"
edition = "2021"
authors = ["rainy-juzixiao <rainy_juzixiao@outlook.com>"]
description = "A C++ code analysis and code generation tool"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
tree-sitter = "0.26.3"
tree-sitter-cpp = "0.23.4"

clap = { version = "4.4", features = ["derive"], optional = true }
colored = { version = "3.1.1", optional = true }
indicatif = { version = "0.18.3", optional = true }

anyhow = "1.0"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

rayon = { version = "1.8", optional = true }

fluent = "0.16"
fluent-bundle = "0.15"
toml = "0.8"

rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
terminal_size = "0.2"
unic-langid = "0.9.6"
once_cell = "1"

[dev-dependencies]
pretty_assertions = "1.4"

[features]
default = ["cli", "json"]
cli = ["clap", "colored", "indicatif"]
json = ["serde", "serde_json"]
parallel = ["rayon"]

[source.crates-io]
replace-with = 'tuna'

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

