[package]
name = "rt_moc"
version = "0.1.3"
edition = "2021"
authors = ["rainy-juzixiao <rainy_juzixiao@outlook.com>"]
description = "A C++ code analysis and code generation tool"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"

[[bin]]
name = "rt_moc"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26.3"
tree-sitter-cpp = "0.23.4"
strfmt = "0.2"

clap = { version = "4.4", features = ["derive"], optional = true }
colored = { version = "3.1.1", optional = true }
indicatif = { version = "0.18.3", optional = true }

anyhow = "1.0"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

rayon = { version = "1.8", optional = true }

toml = "0.8"

rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
terminal_size = "0.2"
lazy_static = "1.5.0"
owo-colors = "4.2.3"
blake3 = "1.8.3"
memmap2 = "0.9.9"
log = "0.4.29"
bincode = "1"

[dev-dependencies]
pretty_assertions = "1.4"

[build-dependencies]
walkdir = "2.4" 
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.43"

[features]
default = ["cli", "json"]
cli = ["clap", "colored", "indicatif"]
json = ["serde", "serde_json"]
parallel = ["rayon"]

[source.crates-io]
replace-with = 'tuna'

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

[package.metadata.bundle]
name = "your_app"
identifier = "com.example.yourapp"
version = "0.1.0"

resources = ["statics"]
